# Hermes_MSR

./: README.md
src/hermes_description/: CMakeLists.txt  package.xml
src/hermes_description/config/: hermes_controllers.yaml  rover_bridge.yaml
src/hermes_description/launch/: robot_controllers.launch.py  robot_gazebo.launch.py  robot_state_publisher.launch.py
src/hermes_description/meshes/dae/: Cone.001.dae  Cone.002.dae  Cone.003.dae  Cone.004.dae  Cone.005.dae  Cone.006.dae  Cone.007.dae  Cone.008.dae  Cone.009.dae  Cone.010.dae  Cone.011.dae  Cone.012.dae  Cone.013.dae  Cone.014.dae  Cone.015.dae  Cone.016.dae  Cone.017.dae  Cone.018.dae  Cone.019.dae  Cone.020.dae  Cone.021.dae  Cone.022.dae  Cone.023.dae  Cone.024.dae  Cone.025.dae  Cone.026.dae  Cone.027.dae  Cone.028.dae  Cone.029.dae  Cone.037.dae  Cone.038.dae  Cone.039.dae  Cone.040.dae  Cone.041.dae  Cone.042.dae  Cone.043.dae  Cone.058.dae  Cone.059.dae  Cone.060.dae  Cone.061.dae  (+8 more)
src/hermes_description/robots/: hermes.urdf.xacro
src/hermes_description/rviz/: robot.rviz
src/hermes_description/urdf/: ros2_control.urdf.xacro
src/hermes_description/urdf/arm/: arm.urdf.xacro  gripper.urdf.xacro
src/hermes_description/urdf/base/: box_storage.urdf.xacro  robot_base.urdf.xacro
src/hermes_description/urdf/cushioning/: cushioning.urdf.xacro
src/hermes_description/urdf/radio/: axel2axel.urdf.xacro  radio.urdf.xacro
src/hermes_description/urdf/sensors/: camera.urdf.xacro  imu.urdf.xacro
src/hermes_description/urdf_completo/: example_xacro  rover.urdf
src/hermes_moveit_config/: .setup_assistant  (+2 more)
(+17 files in other folders)
