<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hermes_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="s.sanchezh.2022@alumnos.urjc.es">sergio</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>gz_ros2_control_demos</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>twist_stamper</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_defult_plugins</exec_depend>
  <exec_depend>xacror</exec_depend>

  <!-- Teleoperation -->
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

